force-app/main/default/objects/ClientProfile__c/ClientProfile__c.object-meta.xml
<CustomObject>
    <description>Client master data layered on top of the standard Account. One profile per Account (enforced by validation rule), carrying tier, health, and commercial attributes.</description>
    <label>Client Profile</label>
    <nameField>
        <label>Client Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>