force-app/main/default/objects/ClientProfile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The standard Account this client profile extends. One profile per account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Profiles</relationshipLabel>
    <relationshipName>Client_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>