force-app/main/default/objects/ClientProfile__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stamped with the Account Id by the domain layer to enforce one Client Profile per Account at the database level (unique). Do not edit manually.</description>
    <externalId>true</externalId>
    <label>Account Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>