force-app/main/default/objects/ClientProfile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this client relationship is currently active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>