force-app/main/default/objects/ClientProfile__c/fields/Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value__c</fullName>
    <description>Annual contract value for the client relationship.</description>
    <label>Annual Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>