force-app/main/default/objects/ClientProfile__c/fields/Client_Tier__c.field-meta.xml
<CustomField>
    <fullName>Client_Tier__c</fullName>
    <description
  >Commercial tier used for prioritization and default rate-card selection.</description>
    <label>Client Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
                <default>true</default>
                <label>Mid-Market</label>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>