force-app/main/default/objects/ClientProfile__c/fields/Contact_Role_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Count__c</fullName>
    <description
  >Number of contact roles associated with this client profile.</description>
    <label>Contact Role Count</label>
    <summaryForeignKey
  >ClientContactRole__c.Client_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>