force-app/main/default/objects/ClientProfile__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Composite client health score from 0 (critical) to 100 (excellent).</description>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>