force-app/main/default/objects/ClientProfile__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <description>Traffic-light status derived from Health Score. Formula field.</description>
    <formula>IF(ISBLANK(Health_Score__c), &quot;Unknown&quot;, IF(Health_Score__c &gt;= 70, &quot;Green&quot;, IF(Health_Score__c &gt;= 40, &quot;Amber&quot;, &quot;Red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Status</label>
    <type>Text</type>
</CustomField>