force-app/main/default/objects/ClientProfile__c/validationRules/Health_Score_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Health_Score_In_Range</fullName>
    <active>true</active>
    <description>Health Score must be between 0 and 100.</description>
    <errorConditionFormula
  >NOT(ISBLANK(Health_Score__c)) &amp;&amp; (Health_Score__c &lt; 0 || Health_Score__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Health_Score__c</errorDisplayField>
    <errorMessage>Health Score must be between 0 and 100.</errorMessage>
</ValidationRule>